# pyrila

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: ARCHITECTURE.md  index.md  quickstart.md
docs/api/: config.md  model.md  modules.md  training.md
docs/guides/: configuration.md  inference_guide.md  training_guide.md
examples/: basic_usage.py  custom_config.py  training_example.py
pyrila/: __init__.py  config.py  exceptions.py  model.py  presets.py
pyrila/modules/: __init__.py  budget.py  cell_builder.py  cell_encoder.py  clp.py  context_index.py  decoder.py  hypothesis.py  knowledge_extractor.py  knowledge_graph.py  pre_output.py  rce.py  reasoning_loop.py  relevance_gate.py  rve.py  tokenizer.py  working_context.py
pyrila/training/: __init__.py  curriculum.py  losses.py  trainer.py  utils.py
pyrila/utils/: __init__.py  helpers.py
tests/: conftest.py  test_model.py  test_modules.py  test_training.py
