[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrila"
version = "0.4.0"
description = "RILA: Recursive Indexed Language Architecture — a production-ready PyTorch implementation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "RILA Team"}
]
keywords = ["deep-learning", "nlp", "language-model", "pytorch", "retrieval-augmented"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/bueormnew/pyrila"
Documentation = "https://github.com/bueormnew/pyrila#readme"
Repository = "https://github.com/bueormnew/pyrila"

[tool.setuptools.packages.find]
include = ["pyrila*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
